// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bundle Epub > generate opf 2`] = `
Rendition {
  "_cover": Cover {
    "_data": undefined,
    "_fullPath": "cover.png",
    "_id": "cover",
    "_mediaType": "image/png",
    "_properties": "cover-image",
  },
  "_fullPath": "OEBPS/content.opf",
  "_identifier": "test-book-id",
  "_manifest": Manifest {
    "_resources": [
      Cover {
        "_data": undefined,
        "_fullPath": "cover.png",
        "_id": "cover",
        "_mediaType": "image/png",
        "_properties": "cover-image",
      },
    ],
    "rendition": [Circular],
  },
  "_metadata": {
    "contributor": [],
    "coverage": "",
    "creator": {
      "fileAs": "XLor",
      "name": "XLor",
      "uid": "creator",
    },
    "date": 2023-02-01T11:00:00.000Z,
    "description": "for test usage",
    "format": "",
    "language": "zh-CN",
    "lastModified": 2023-02-26T11:00:00.000Z,
    "publisher": "",
    "relation": "",
    "rights": "",
    "source": "imagine",
    "subject": "",
    "title": "Test Book",
    "type": "",
  },
  "_navigation": undefined,
  "_specVersion": "3.0",
  "_spine": Spine {
    "_itemrefs": [],
    "rendition": [Circular],
  },
  "_uniqueIdentifier": "BookId",
}
`;

exports[`Bundle Epub > generate toc 1`] = `
Rendition {
  "_cover": undefined,
  "_fullPath": "OEBPS/content.opf",
  "_identifier": "12345",
  "_manifest": Manifest {
    "_resources": [
      XHTML {
        "_content": "1",
        "_fullPath": "page1.xhtml",
        "_id": "page1",
        "_mediaType": "application/xhtml+xml",
        "_meta": {
          "language": "",
          "title": "",
        },
        "_properties": undefined,
      },
      XHTML {
        "_content": "2",
        "_fullPath": "page2.xhtml",
        "_id": "page2",
        "_mediaType": "application/xhtml+xml",
        "_meta": {
          "language": "",
          "title": "",
        },
        "_properties": undefined,
      },
      XHTML {
        "_content": "3",
        "_fullPath": "page3.xhtml",
        "_id": "page3",
        "_mediaType": "application/xhtml+xml",
        "_meta": {
          "language": "",
          "title": "",
        },
        "_properties": undefined,
      },
      XHTML {
        "_content": "4",
        "_fullPath": "page4.xhtml",
        "_id": "page4",
        "_mediaType": "application/xhtml+xml",
        "_meta": {
          "language": "",
          "title": "",
        },
        "_properties": undefined,
      },
      XHTML {
        "_content": "5",
        "_fullPath": "page5.xhtml",
        "_id": "page5",
        "_mediaType": "application/xhtml+xml",
        "_meta": {
          "language": "",
          "title": "",
        },
        "_properties": undefined,
      },
      Navigation {
        "_fullPath": "nav.xhtml",
        "_id": "nav",
        "_mediaType": "application/xhtml+xml",
        "_nav": [
          {
            "resource": XHTML {
              "_content": "1",
              "_fullPath": "page1.xhtml",
              "_id": "page1",
              "_mediaType": "application/xhtml+xml",
              "_meta": {
                "language": "",
                "title": "",
              },
              "_properties": undefined,
            },
            "title": "1",
          },
          {
            "resource": XHTML {
              "_content": "2",
              "_fullPath": "page2.xhtml",
              "_id": "page2",
              "_mediaType": "application/xhtml+xml",
              "_meta": {
                "language": "",
                "title": "",
              },
              "_properties": undefined,
            },
            "title": "2",
          },
          {
            "children": [
              {
                "resource": XHTML {
                  "_content": "3",
                  "_fullPath": "page3.xhtml",
                  "_id": "page3",
                  "_mediaType": "application/xhtml+xml",
                  "_meta": {
                    "language": "",
                    "title": "",
                  },
                  "_properties": undefined,
                },
                "title": "3",
              },
              {
                "resource": XHTML {
                  "_content": "4",
                  "_fullPath": "page4.xhtml",
                  "_id": "page4",
                  "_mediaType": "application/xhtml+xml",
                  "_meta": {
                    "language": "",
                    "title": "",
                  },
                  "_properties": undefined,
                },
                "title": "4",
              },
            ],
            "title": "Sub",
          },
          {
            "resource": XHTML {
              "_content": "5",
              "_fullPath": "page5.xhtml",
              "_id": "page5",
              "_mediaType": "application/xhtml+xml",
              "_meta": {
                "language": "",
                "title": "",
              },
              "_properties": undefined,
            },
            "title": "5",
          },
        ],
        "_options": {
          "heading": {
            "level": 2,
          },
          "title": "Toc",
        },
        "_properties": "nav",
      },
    ],
    "rendition": [Circular],
  },
  "_metadata": {
    "contributor": [],
    "coverage": "",
    "creator": {
      "fileAs": "XLor",
      "name": "XLor",
      "uid": "creator",
    },
    "date": 2023-02-01T11:00:00.000Z,
    "description": "for test usage",
    "format": "",
    "language": "zh-CN",
    "lastModified": 2023-02-26T11:00:00.000Z,
    "publisher": "",
    "relation": "",
    "rights": "",
    "source": "imagine",
    "subject": "",
    "title": "Test Book",
    "type": "",
  },
  "_navigation": Navigation {
    "_fullPath": "nav.xhtml",
    "_id": "nav",
    "_mediaType": "application/xhtml+xml",
    "_nav": [
      {
        "resource": XHTML {
          "_content": "1",
          "_fullPath": "page1.xhtml",
          "_id": "page1",
          "_mediaType": "application/xhtml+xml",
          "_meta": {
            "language": "",
            "title": "",
          },
          "_properties": undefined,
        },
        "title": "1",
      },
      {
        "resource": XHTML {
          "_content": "2",
          "_fullPath": "page2.xhtml",
          "_id": "page2",
          "_mediaType": "application/xhtml+xml",
          "_meta": {
            "language": "",
            "title": "",
          },
          "_properties": undefined,
        },
        "title": "2",
      },
      {
        "children": [
          {
            "resource": XHTML {
              "_content": "3",
              "_fullPath": "page3.xhtml",
              "_id": "page3",
              "_mediaType": "application/xhtml+xml",
              "_meta": {
                "language": "",
                "title": "",
              },
              "_properties": undefined,
            },
            "title": "3",
          },
          {
            "resource": XHTML {
              "_content": "4",
              "_fullPath": "page4.xhtml",
              "_id": "page4",
              "_mediaType": "application/xhtml+xml",
              "_meta": {
                "language": "",
                "title": "",
              },
              "_properties": undefined,
            },
            "title": "4",
          },
        ],
        "title": "Sub",
      },
      {
        "resource": XHTML {
          "_content": "5",
          "_fullPath": "page5.xhtml",
          "_id": "page5",
          "_mediaType": "application/xhtml+xml",
          "_meta": {
            "language": "",
            "title": "",
          },
          "_properties": undefined,
        },
        "title": "5",
      },
    ],
    "_options": {
      "heading": {
        "level": 2,
      },
      "title": "Toc",
    },
    "_properties": "nav",
  },
  "_specVersion": "3.0",
  "_spine": Spine {
    "_itemrefs": [
      ItemRef {
        "_idref": "page1",
        "optional": {},
      },
      ItemRef {
        "_idref": "page2",
        "optional": {},
      },
      ItemRef {
        "_idref": "page3",
        "optional": {},
      },
      ItemRef {
        "_idref": "page4",
        "optional": {},
      },
      ItemRef {
        "_idref": "page5",
        "optional": {},
      },
    ],
    "rendition": [Circular],
  },
  "_uniqueIdentifier": "book-id",
}
`;

exports[`Bundle Epub > write epub 1`] = `
Rendition {
  "_cover": undefined,
  "_fullPath": "OEBPS/content.opf",
  "_identifier": "test-book-id",
  "_manifest": Manifest {
    "_resources": [
      XHTML {
        "_content": "<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
  <head>
    <title>Data URL does not open in top-level context</title>
    <style>
      code {
        color: #c63501;
      }
    </style>
  </head>
  <body>
    <h1>Data URL does not open in top-level context</h1>
    <p>The following jpeg is contained within a <code>data:</code> URL, which is used as the <code>src</code> attribute for an <code>img</code> element.</p>
    <p>The test passes if you are able to see the image below inside this ebook.</p>
  </body>
</html>",
        "_fullPath": "cover.xhtml",
        "_id": "cover",
        "_mediaType": "application/xhtml+xml",
        "_meta": {
          "language": "en",
          "title": "",
        },
        "_properties": undefined,
      },
      Navigation {
        "_fullPath": "nav.xhtml",
        "_id": "nav",
        "_mediaType": "application/xhtml+xml",
        "_nav": [
          {
            "resource": XHTML {
              "_content": "<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
  <head>
    <title>Data URL does not open in top-level context</title>
    <style>
      code {
        color: #c63501;
      }
    </style>
  </head>
  <body>
    <h1>Data URL does not open in top-level context</h1>
    <p>The following jpeg is contained within a <code>data:</code> URL, which is used as the <code>src</code> attribute for an <code>img</code> element.</p>
    <p>The test passes if you are able to see the image below inside this ebook.</p>
  </body>
</html>",
              "_fullPath": "cover.xhtml",
              "_id": "cover",
              "_mediaType": "application/xhtml+xml",
              "_meta": {
                "language": "en",
                "title": "",
              },
              "_properties": undefined,
            },
            "title": "cover",
          },
        ],
        "_options": {},
        "_properties": "nav",
      },
    ],
    "rendition": [Circular],
  },
  "_metadata": {
    "contributor": [],
    "coverage": "",
    "creator": {
      "fileAs": "XLor",
      "name": "XLor",
      "uid": "creator",
    },
    "date": 2023-02-01T11:00:00.000Z,
    "description": "for test usage",
    "format": "",
    "language": "zh-CN",
    "lastModified": 2023-02-26T11:00:00.000Z,
    "publisher": "",
    "relation": "",
    "rights": "",
    "source": "imagine",
    "subject": "",
    "title": "Test Book",
    "type": "",
  },
  "_navigation": Navigation {
    "_fullPath": "nav.xhtml",
    "_id": "nav",
    "_mediaType": "application/xhtml+xml",
    "_nav": [
      {
        "resource": XHTML {
          "_content": "<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
  <head>
    <title>Data URL does not open in top-level context</title>
    <style>
      code {
        color: #c63501;
      }
    </style>
  </head>
  <body>
    <h1>Data URL does not open in top-level context</h1>
    <p>The following jpeg is contained within a <code>data:</code> URL, which is used as the <code>src</code> attribute for an <code>img</code> element.</p>
    <p>The test passes if you are able to see the image below inside this ebook.</p>
  </body>
</html>",
          "_fullPath": "cover.xhtml",
          "_id": "cover",
          "_mediaType": "application/xhtml+xml",
          "_meta": {
            "language": "en",
            "title": "",
          },
          "_properties": undefined,
        },
        "title": "cover",
      },
    ],
    "_options": {},
    "_properties": "nav",
  },
  "_specVersion": "3.0",
  "_spine": Spine {
    "_itemrefs": [
      ItemRef {
        "_idref": "cover",
        "optional": {},
      },
    ],
    "rendition": [Circular],
  },
  "_uniqueIdentifier": "BookId",
}
`;
